[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/LightDetector.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/SoundEmitter.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]

[node name="Player" type="KinematicBody"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.26, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Collider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.4, 0 )
shape = SubResource( 1 )

[node name="SurfaceDetector" type="RayCast" parent="."]
enabled = true

[node name="LightDetector" parent="." instance=ExtResource( 2 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 3.84615, 0, 0, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 3.84615, 0, 2.2, -0.345 )
cull_mask = 1048573
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera"]

[node name="Crosshair" type="ColorRect" parent="Camera/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -1.0
margin_right = 3.0
margin_bottom = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LightIndicator" type="ProgressBar" parent="Camera/CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -126.0
margin_right = 126.0
margin_bottom = 40.0
max_value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="AudioStreamPlayer" parent="."]

[node name="SoundEmitter" type="Area" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="SoundEmitter"]
